--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>metisMenu</artifactId>
-    <version>1.1.3-SNAPSHOT</version>
+    <version>1.1.3</version>
     <name>metisMenu</name>
     <description>WebJar for metisMenu</description>
     <url>http://webjars.org</url>
@@ -53,7 +53,7 @@
         <url>http://github.com/webjars/metisMenu</url>
         <connection>scm:git:https://github.com/webjars/metisMenu.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/metisMenu.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>metisMenu-1.1.3</tag>
     </scm>
     
     <dependencies>
@@ -76,13 +76,13 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <echo message="download archive"/>
-                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip"/>
-                                <echo message="unzip archive"/>
-                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}"/>
-                                <echo message="moving resources"/>
+                                <echo message="download archive" />
+                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip" />
+                                <echo message="unzip archive" />
+                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
+                                <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/metisMenu-${upstream.version}/dist"/>
+                                    <fileset dir="${project.build.directory}/metisMenu-${upstream.version}/dist" />
                                 </move>
                             </target>
                         </configuration>
