Fix typo in requirejs path

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <requirejs>
             {
                 "paths": {
-                    "metisMenu": "metismenu"
+                    "metisMenu": "metisMenu"
                 },
                 "shim": {
                     "metisMenu": ["bootstrap"]
