--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>metisMenu</artifactId>
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.3-1-SNAPSHOT</version>
     <name>metisMenu</name>
     <description>WebJar for metisMenu</description>
     <url>http://webjars.org</url>
