--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,15 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>metisMenu</artifactId>
-    <version>1.1.3-2-SNAPSHOT</version>
+    <version>2.2.0-SNAPSHOT</version>
     <name>metisMenu</name>
     <description>WebJar for metisMenu</description>
     <url>http://webjars.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstream.version>1.1.3</upstream.version>
-        <upstream.url>https://github.com/onokumus/metisMenu/archive/${upstream.version}.zip</upstream.url>
+        <upstream.version>2.2.0</upstream.version>
+        <upstream.url>https://github.com/onokumus/metisMenu/archive/v${upstream.version}.zip</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
         <requirejs>
             {
