--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>metisMenu</artifactId>
-    <version>3.0.7</version>
+    <version>3.0.8-SNAPSHOT</version>
     <name>metisMenu</name>
     <description>WebJar for metisMenu</description>
     <url>http://webjars.org</url>
@@ -53,7 +53,7 @@
         <url>http://github.com/webjars/metisMenu</url>
         <connection>scm:git:https://github.com/webjars/metisMenu.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/metisMenu.git</developerConnection>
-        <tag>metisMenu-3.0.7</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <dependencies>
